# Actioneer

./: .gitignore  README.md  app  com.github.phase1geo.actioneer.yml  meson.build
.github/workflows/: ci.yml
data/: Application.css  com.github.phase1geo.actioneer.appdata.xml  com.github.phase1geo.actioneer.appdata.xml.in  com.github.phase1geo.actioneer.desktop  com.github.phase1geo.actioneer.gresource.xml  com.github.phase1geo.actioneer.gschema.xml  com.github.phase1geo.actioneer.shortcuts.ui  io.github.phase1geo.actioneer.appdata.xml  io.github.phase1geo.actioneer.appdata.xml.in  io.github.phase1geo.actioneer.desktop  io.github.phase1geo.actioneer.desktop.in  io.github.phase1geo.actioneer.gresource.xml  io.github.phase1geo.actioneer.gschema.xml  meson.build
elementary/: io.github.phase1geo.actioneer.yml
po/: POTFILES  com.github.phase1geo.actioneer.pot  it.po  meson.build  nl.po
po/extra/: POTFILES  extra.pot  it.po  meson.build  nl.po
src/: ActionCondition.vala  ActionConditions.vala  AppList.vala  Application.vala  Controller.vala  DateCondition.vala  DirAction.vala  DirActions.vala  DirList.vala  FileAction.vala  FileActions.vala  FileCompress.vala  Imager.vala  IntCondition.vala  KindCondition.vala  MainWindow.vala  SearchCriteria.vala  SearchHistory.vala  Server.vala  ServerMountOp.vala  Servers.vala  SizeCondition.vala  StarCondition.vala  TagsCondition.vala  TestResult.vala  TextCondition.vala  TokenText.vala  Utils.vala  meson.build
src/actions/: TestAction.vala  meson.build
src/conditions/: TestCondition.vala  meson.build
src/widgets/: .ActionBoxList.vala.swp  .BoxList.vala.swp  ActionBoxList.vala  ActionFileBox.vala  ActionInterface.vala  ActionOptMenu.vala  BoxList.vala  CondBoxList.vala  CondInterface.vala  DateOptMenu.vala  DirectoryList.vala  EditServer.vala  EnableList.vala  FileEntry.vala  OptMenu.vala  PinList.vala  RuleForm.vala  RuleList.vala  RuleStack.vala  SearchPanel.vala  TextOptMenu.vala  TokenTextBox.vala  meson.build
src/widgets/actions/: ActionBase.vala  ActionCompressBox.vala  ActionConvertBox.vala  ActionEmptyBox.vala  ActionFileBox.vala  ActionOpenBox.vala  ActionRenameBox.vala  ActionResizeBox.vala  ActionStarBox.vala  ActionSubfolderBox.vala  ActionTextBox.vala  ActionUploadBox.vala  meson.build
src/widgets/conditions/: CondBase.vala  CondDateBox.vala  CondGroupBox.vala  CondIntBox.vala  CondKindBox.vala  CondMimeBox.vala  CondSizeBox.vala  CondStarBox.vala  CondTagsBox.vala  CondTextBox.vala  meson.build
src/widgets/menubuttons/: ActionOptMenu.vala  CompFormatOptMenu.vala  CompLevelOptMenu.vala  CondOptMenu.vala  ConvertOptMenu.vala  IntOptMenu.vala  KindMatchOptMenu.vala  KindOptMenu.vala  MatchOptMenu.vala  MimeOptMenu.vala  OpenOptMenu.vala  OptMenu.vala  ResizeOptMenu.vala  ServerConnOptMenu.vala  ServerOptMenu.vala  SizeOptMenu.vala  StarOptMenu.vala  TagsOptMenu.vala  TimeOptMenu.vala  meson.build
src/widgets/tokenbox/: TokenBox.vala  meson.build
