sources += files(
    'ActionCondition.vala',
    'ActionConditions.vala',
    'Application.vala',
    'Controller.vala',
    'DateCondition.vala',
    'DirAction.vala',
    'DirActions.vala',
    'DirList.vala',
    'FileAction.vala',
    'FileActions.vala',
    'FileCompress.vala',
    'MainWindow.vala',
    'SizeCondition.vala',
    'StarCondition.vala',
    'TagsCondition.vala',
    'TestResult.vala',
    'TextCondition.vala',
    'TokenText.vala',
    'Utils.vala'
)

subdir('widgets')
