sources += files(
    'ActionCondition.vala',
    'ActionConditions.vala',
    'AppList.vala',
    'Application.vala',
    'Controller.vala',
    'DateCondition.vala',
    'DirAction.vala',
    'DirActions.vala',
    'DirList.vala',
    'FileAction.vala',
    'FileActions.vala',
    'FileCompress.vala',
    'Imager.vala',
    'IntCondition.vala',
    'KindCondition.vala',
    'MainWindow.vala',
    'SearchCriteria.vala',
    'SearchHistory.vala',
    'Server.vala',
    'Servers.vala',
    'SizeCondition.vala',
    'TagsCondition.vala',
    'TestResult.vala',
    'TextCondition.vala',
    'TokenText.vala',
    'Utils.vala'
)

subdir('widgets')
