sources += files(
    'ActionBoxList.vala',
    'BoxList.vala',
    'CondBoxList.vala',
    'DirectoryList.vala',
    'EditServer.vala',
    'EnableList.vala',
    'PinList.vala',
    'RuleForm.vala',
    'RuleList.vala',
    'RuleStack.vala',
    'SearchPanel.vala'
)

subdir('actions')
subdir('conditions')
subdir('menubuttons')
subdir('tokenbox')
