sources += files(
    'ActionBoxList.vala',
    'BoxList.vala',
    'CondBoxList.vala',
    'DirectoryList.vala',
    'EditServer.vala',
    'EnableList.vala',
    'FileEntry.vala',
    'PinList.vala',
    'RuleForm.vala',
    'RuleList.vala',
    'RuleStack.vala',
    'SearchPanel.vala',
    'TokenTextBox.vala'
)

subdir('actions')
subdir('conditions')
subdir('menubuttons')
subdir('tokenbox')
