sources += files(
    'ActionBase.vala',
    'ActionCompressBox.vala',
    'ActionConvertBox.vala',
    'ActionEmptyBox.vala',
    'ActionFileBox.vala',
    'ActionOpenBox.vala',
    'ActionRenameBox.vala',
    'ActionResizeBox.vala',
    'ActionStarBox.vala',
    'ActionTextBox.vala',
    'ActionUploadBox.vala'
)
