sources += files(
    'ActionBase.vala',
    'ActionCompressBox.vala',
    'ActionConvertBox.vala',
    'ActionEmptyBox.vala',
    'ActionFileBox.vala',
    'ActionOpenBox.vala',
    'ActionRenameBox.vala',
    'ActionResizeBox.vala',
    'ActionStarBox.vala',
    'ActionSubfolderBox.vala',
    'ActionTextBox.vala',
    'ActionUploadBox.vala'
)
