sources += files(
    'ActionOptMenu.vala',
    'CompFormatOptMenu.vala',
    'CompLevelOptMenu.vala',
    'CondOptMenu.vala',
    'DateOptMenu.vala',
    'IntOptMenu.vala',
    'MatchOptMenu.vala',
    'OptMenu.vala',
    'SizeOptMenu.vala',
    'StarOptMenu.vala',
    'TagsOptMenu.vala',
    'TextOptMenu.vala',
    'TimeOptMenu.vala'
)
