sources += files(
    'ActionOptMenu.vala',
    'CompFormatOptMenu.vala',
    'CompLevelOptMenu.vala',
    'CondOptMenu.vala',
    'ConvertOptMenu.vala',
    'DateOptMenu.vala',
    'IntOptMenu.vala',
    'MatchOptMenu.vala',
    'OptMenu.vala',
    'ResizeOptMenu.vala',
    'SizeOptMenu.vala',
    'StarOptMenu.vala',
    'TagsOptMenu.vala',
    'TextOptMenu.vala',
    'TimeOptMenu.vala'
)
