sources += files(
    'ActionOptMenu.vala',
    'CompFormatOptMenu.vala',
    'CompLevelOptMenu.vala',
    'CondOptMenu.vala',
    'ConvertOptMenu.vala',
    'DateOptMenu.vala',
    'IntOptMenu.vala',
    'KindOptMenu.vala',
    'KindMatchOptMenu.vala',
    'MatchOptMenu.vala',
    'OpenOptMenu.vala',
    'OptMenu.vala',
    'ResizeOptMenu.vala',
    'ServerConnOptMenu.vala',
    'SizeOptMenu.vala',
    'StarOptMenu.vala',
    'TagsOptMenu.vala',
    'TextOptMenu.vala',
    'TimeOptMenu.vala'
)
